--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,7 @@
 {
     "require": {
-        "nikic/fast-route": "^1.3"
+        "nikic/fast-route": "^1.3",
+        "league/flysystem-aws-s3-v3": "^3.0",
+        "symfony/dotenv": "^6.0"
     }
 }
